Added documentation for turning off prefetching (called "fast memory access"). Changed HTML formatting to work around a small Internet Explorer 6 display bug.

--- a/DScaler/Help/GradualNoise.htm
+++ b/DScaler/Help/GradualNoise.htm
@@ -25,20 +25,12 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   <BODY BGCOLOR="#FFFFFF">
     <TABLE WIDTH="100%" BORDER="0" CELLSPACING="0" CELLPADDING="0">
       <TR>
-        <TD HEIGHT="1" WIDTH="160">
-          <IMG SRC="images/spacer.gif" WIDTH="1" HEIGHT="1"> 
-        </TD>
-        <TD HEIGHT="1" WIDTH="342">
-          <IMG SRC="images/spacer.gif" WIDTH="1" HEIGHT="1"> 
-        </TD>
-        <TD HEIGHT="1" WIDTH="501">
-          <IMG SRC="images/spacer.gif" WIDTH="1" HEIGHT="1"> 
-        </TD>
+        <TD HEIGHT="1" WIDTH="160"><IMG SRC="images/spacer.gif" WIDTH="1" HEIGHT="1"></TD>
+        <TD HEIGHT="1" WIDTH="342"><IMG SRC="images/spacer.gif" WIDTH="1" HEIGHT="1"></TD>
+        <TD HEIGHT="1" WIDTH="501"><IMG SRC="images/spacer.gif" WIDTH="1" HEIGHT="1"></TD>
       </TR>
       <TR>
-        <TD WIDTH="160">
-          <IMG SRC="images/dscalerlogo.jpg" ALT="DScaler Logo"> 
-        </TD>
+        <TD WIDTH="160"><IMG SRC="images/dscalerlogo.jpg" ALT="DScaler Logo"></TD>
         <TD COLSPAN="2" ALIGN="right" VALIGN="bottom">
           <FONT FACE="Verdana, Arial, Helvetica, sans-serif" SIZE="5"><B>
           <!-- #BeginEditable "Page%20Title" -->
@@ -68,12 +60,14 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           </P>
           <HR>
           <P>
-            <B><FONT FACE="Arial" SIZE="4" COLOR="#993300">
-						  Noise Reduction
-					  </FONT></B>
+            <B><FONT FACE="Arial" SIZE="4">
+              The Settings
+            </FONT></B>
           </P>
           <P>
-            There&rsquo;s just one setting&nbsp;&mdash; <FONT COLOR="#993300">Noise Reduction</FONT>.
+            <B><FONT FACE="Arial" COLOR="#993300">
+						  Noise Reduction
+					  </FONT></B>
           </P>
           <P>
             The higher you set it, the more you&rsquo;ll cut down on noise&nbsp;&mdash; but the more
@@ -88,6 +82,23 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
             To choose a setting for it, turn on just about any comedy or drama&nbsp;&mdash; anything
             with close-ups of moving faces. Increase <FONT COLOR="#993300">Noise Reduction</FONT> until
             the suppression of noise doesn&rsquo;t seem worth the blur.
+          </P>
+            <B><FONT FACE="Arial" COLOR="#993300">
+              Fast memory access
+            </FONT></B>
+          </P>
+          <P>
+            You&rsquo;ll probably want to keep this setting turned on.
+						With it enabled, the filter will run up to twice as
+						fast.
+          </P>
+          <P>
+            However, there are a few motherboards&nbsp;&mdash; mostly
+						made by VIA&nbsp;&mdash; for which <FONT COLOR="#993300">
+            Fast memory access</FONT> will cause problems.  If you see
+						fleeting horizontal lines in your picture, try turning this
+						off in any filters which offer it.  If that fixes the lines,
+						you&rsquo;ll know to keep this setting disabled.
           </P>
           <HR>
           <P>
