--- a/DScaler/Help/Noise.HTM
+++ b/DScaler/Help/Noise.HTM
@@ -74,11 +74,19 @@ values.</p>
 <td>6</td>
 <td>Pixel luminance differences below this are considered noise.</td>
 </tr>
+
 <tr>
 <td>Temporal Chroma Threshold</td>
           <td>7</td>
 <td>Pixel chroma differences below this are considered noise.</td>
 </tr>
+
+<tr>
+<td>Fast Memory Access</td>
+<td>On</td>
+<td>This speeds up the filter, but is incompatible with some VIA motherboards.</td>
+</tr>
+
 </table>
 <!-- #EndEditable -->
 </td>
