--- a/DScaler/Help/Sharpness.HTM
+++ b/DScaler/Help/Sharpness.HTM
@@ -70,6 +70,12 @@ on VCR sources.</p>
 <td>128</td>
 <td>Amount of sharpness to apply.  0 is none 255 is as much as we can.</td>
 </tr>
+
+<tr>
+<td>Fast Memory Access</td>
+<td>On</td>
+<td>This speeds up the filter, but is incompatible with some VIA motherboards.</td>
+</tr>
 </table>
 
 <!-- #EndEditable -->
