--- a/DScaler/Help/AdaptiveNoise.htm
+++ b/DScaler/Help/AdaptiveNoise.htm
@@ -27,20 +27,12 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   <BODY BGCOLOR="#FFFFFF">
     <TABLE WIDTH="100%" BORDER="0" CELLSPACING="0" CELLPADDING="0">
       <TR>
-        <TD HEIGHT="1" WIDTH="160">
-          <IMG SRC="images/spacer.gif" WIDTH="1" HEIGHT="1">
-        </TD>
-        <TD HEIGHT="1" WIDTH="342">
-          <IMG SRC="images/spacer.gif" WIDTH="1" HEIGHT="1">
-        </TD>
-        <TD HEIGHT="1" WIDTH="501">
-          <IMG SRC="images/spacer.gif" WIDTH="1" HEIGHT="1">
-        </TD>
+        <TD HEIGHT="1" WIDTH="160"><IMG SRC="images/spacer.gif" WIDTH="1" HEIGHT="1"></TD>
+        <TD HEIGHT="1" WIDTH="342"><IMG SRC="images/spacer.gif" WIDTH="1" HEIGHT="1"></TD>
+        <TD HEIGHT="1" WIDTH="501"><IMG SRC="images/spacer.gif" WIDTH="1" HEIGHT="1"></TD>
       </TR>
       <TR>
-        <TD WIDTH="160">
-          <IMG SRC="images/dscalerlogo.jpg" ALT="DScaler Logo">
-        </TD>
+        <TD WIDTH="160"><IMG SRC="images/dscalerlogo.jpg" ALT="DScaler Logo"></TD>
         <TD COLSPAN="2" ALIGN="right" VALIGN="bottom">
           <FONT FACE="Verdana, Arial, Helvetica, sans-serif" SIZE=
           "5"><B><!-- #BeginEditable "Page%20Title" -->
@@ -94,7 +86,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           </P>
           <P>
             <B><FONT FACE="Arial" COLOR="#993300">
-              Noise Reduction
+              Noise reduction
             </FONT></B>
           </P>
           <P>
@@ -106,7 +98,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
             movement.
           </P>
           <P>
-            The <FONT COLOR="#993300">Noise Reduction</FONT>
+            The <FONT COLOR="#993300">noise reduction</FONT>
             setting lets you tell the filter how to make this
             tradeoff. Set it low, and the computer will play
             it safe, avoiding any parts of the image which
@@ -130,8 +122,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <P>
             There are two kinds of video which deserve some special
             consideration: cartoons and sports.  With cartoons, you
-            can use a much higher <FONT COLOR="#993300">Noise
-            Reduction</FONT>, since animation
+            can use a much higher <FONT COLOR="#993300">noise
+            reduction</FONT>, since animation
             tends to have less fine detail.  And with sports (or
             any other show with constant motion), there isn't anything to
             gain from a noise filter, so you can just turn it off.  On the other
@@ -141,7 +133,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <P>
             Before you fine tune this setting, make sure that the
             filter has adapted to the current signal. To do so,
-            make use of the <FONT COLOR="#993300">Lock Dot</FONT>,
+            make use of the <FONT COLOR="#993300">lock dot</FONT>,
             described below.
           </P>
           <P>
@@ -157,14 +149,14 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           </P>
           <P>
             Regardless of your <FONT COLOR=
-            "#993300">Stability</FONT> setting, the filter will
+            "#993300">stability</FONT> setting, the filter will
             always preserve a certain amount of variation in
             order to maintain the color depth of the
             original image.
           </P>
           <P>
             <B><FONT FACE="Arial" COLOR="#993300">
-              Lock Dot
+              Lock dot
             </FONT></B>
           </P>
           <P>
@@ -203,7 +195,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           </P>
           <P>
             <B><FONT FACE="Arial" COLOR="#993300">
-              Fast Memory Access
+              Fast memory access
             </FONT></B>
           </P>
           <P>
@@ -214,7 +206,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <P>
             However, there are a few motherboards&nbsp;&mdash; mostly
 						made by VIA&nbsp;&mdash; for which <FONT COLOR="#993300">
-            Fast Memory Access</FONT> will cause problems.  If you see
+            Fast memory access</FONT> will cause problems.  If you see
 						fleeting horizontal lines in your picture, try turning this
 						off in any filters which offer it.  If that fixes the lines,
 						you&rsquo;ll know to keep this setting disabled.
