--- a/DScaler/Help/Histogram.htm
+++ b/DScaler/Help/Histogram.htm
@@ -27,20 +27,12 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   <BODY BGCOLOR="#FFFFFF">
     <TABLE WIDTH="100%" BORDER="0" CELLSPACING="0" CELLPADDING="0">
       <TR>
-        <TD HEIGHT="1" WIDTH="160">
-          <IMG SRC="images/spacer.gif" WIDTH="1" HEIGHT="1">
-        </TD>
-        <TD HEIGHT="1" WIDTH="342">
-          <IMG SRC="images/spacer.gif" WIDTH="1" HEIGHT="1">
-        </TD>
-        <TD HEIGHT="1" WIDTH="501">
-          <IMG SRC="images/spacer.gif" WIDTH="1" HEIGHT="1">
-        </TD>
+        <TD HEIGHT="1" WIDTH="160"><IMG SRC="images/spacer.gif" WIDTH="1" HEIGHT="1"></TD>
+        <TD HEIGHT="1" WIDTH="342"><IMG SRC="images/spacer.gif" WIDTH="1" HEIGHT="1"></TD>
+        <TD HEIGHT="1" WIDTH="501"><IMG SRC="images/spacer.gif" WIDTH="1" HEIGHT="1"></TD>
       </TR>
       <TR>
-        <TD WIDTH="160">
-          <IMG SRC="images/dscalerlogo.jpg" ALT="DScaler Logo">
-        </TD>
+        <TD WIDTH="160"><IMG SRC="images/dscalerlogo.jpg" ALT="DScaler Logo"></TD>
         <TD COLSPAN="2" ALIGN="right" VALIGN="bottom">
           <FONT FACE="Verdana, Arial, Helvetica, sans-serif" SIZE=
           "5"><B><!-- #BeginEditable "Page%20Title" -->
@@ -74,7 +66,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           </P>
           <P>
             <B><FONT FACE="Arial" COLOR="#993300">
-              Display Mode
+              Display mode
             </FONT></B>
           </P>
           <P>
@@ -93,7 +85,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
             </UL>
             <P>
               The brightness is displayed in white, &ldquo;U&rdquo; color in pink, and &ldquo;V&rdquo; color
-              in light blue.  Regardless of the <FONT COLOR="#993300">Display Mode</FONT>, a dotted yellow
+              in light blue.  Regardless of the <FONT COLOR="#993300">display mode</FONT>, a dotted yellow
               line will appear below the graph, showing the graph&rsquo;s full 256 value range.
             </P>
             <P>
@@ -109,7 +101,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
             </P>
           <P>
             <B><FONT FACE="Arial" COLOR="#993300">
-              Vertical Averaging
+              Vertical averaging
             </FONT></B>
           </P>
           <P>
@@ -121,6 +113,24 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           artifactually extend the range of the graph. On the other hand, it does cause inaccuracy at
           vertical edges in the picture.
            </P>
+          <P>
+            <B><FONT FACE="Arial" COLOR="#993300">
+              Fast memory access
+            </FONT></B>
+          </P>
+          <P>
+            You&rsquo;ll probably want to keep this setting turned on.
+						With it enabled, the filter will run up to twice as
+						fast.
+          </P>
+          <P>
+            However, there are a few motherboards&nbsp;&mdash; mostly
+						made by VIA&nbsp;&mdash; for which <FONT COLOR="#993300">
+            Fast memory access</FONT> will cause problems.  If you see
+						fleeting horizontal lines in your picture, try turning this
+						off in any filters which offer it.  If that fixes the lines,
+						you&rsquo;ll know to keep this setting disabled.
+          </P>
           <HR>
           <P>
             <B><FONT FACE="Arial" SIZE="4">
@@ -136,7 +146,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
             You can use this filter to manually calibrate signals for which you don&rsquo;t have a calibration
             pattern. First make sure that you have Full Luma Range
             (in the &ldquo;Advanced Video Flags...&rdquo; dialog)
-            turned on.  Set the Histogram filter&rsquo;s <FONT COLOR="#993300">Display Mode</FONT> to
+            turned on.  Set the Histogram filter&rsquo;s <FONT COLOR="#993300">display mode</FONT> to
             &ldquo;brightness,&rdquo; then open up the &ldquo;Video Settings...&rdquo; dialog.
           </P>
           <P>
