--- a/DScaler/Help/TemporalComb.htm
+++ b/DScaler/Help/TemporalComb.htm
@@ -26,20 +26,12 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   <BODY BGCOLOR="#FFFFFF">
     <TABLE WIDTH="100%" BORDER="0" CELLSPACING="0" CELLPADDING="0">
       <TR>
-        <TD HEIGHT="1" WIDTH="160">
-          <IMG SRC="images/spacer.gif" WIDTH="1" HEIGHT="1">
-        </TD>
-        <TD HEIGHT="1" WIDTH="342">
-          <IMG SRC="images/spacer.gif" WIDTH="1" HEIGHT="1">
-        </TD>
-        <TD HEIGHT="1" WIDTH="501">
-          <IMG SRC="images/spacer.gif" WIDTH="1" HEIGHT="1">
-        </TD>
+        <TD HEIGHT="1" WIDTH="160"><IMG SRC="images/spacer.gif" WIDTH="1" HEIGHT="1"></TD>
+        <TD HEIGHT="1" WIDTH="342"><IMG SRC="images/spacer.gif" WIDTH="1" HEIGHT="1"></TD>
+        <TD HEIGHT="1" WIDTH="501"><IMG SRC="images/spacer.gif" WIDTH="1" HEIGHT="1"></TD>
       </TR>
       <TR>
-        <TD WIDTH="160">
-          <IMG SRC="images/dscalerlogo.jpg" ALT="DScaler Logo">
-        </TD>
+        <TD WIDTH="160"><IMG SRC="images/dscalerlogo.jpg" ALT="DScaler Logo"></TD>
         <TD COLSPAN="2" ALIGN="right" VALIGN="bottom">
           <FONT FACE="Verdana, Arial, Helvetica, sans-serif" SIZE="5"><B>
           <!-- #BeginEditable "Page%20Title" -->
@@ -197,6 +189,24 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
             setting takes effect.
           </P>
           <P>
+            <B><FONT FACE="Arial" COLOR="#993300">
+              Fast memory access
+            </FONT></B>
+          </P>
+          <P>
+            You&rsquo;ll probably want to keep this setting turned on.
+						With it enabled, the filter will run up to twice as
+						fast.
+          </P>
+          <P>
+            However, there are a few motherboards&nbsp;&mdash; mostly
+						made by VIA&nbsp;&mdash; for which <FONT COLOR="#993300">
+            Fast memory access</FONT> will cause problems.  If you see
+						fleeting horizontal lines in your picture, try turning this
+						off in any filters which offer it.  If that fixes the lines,
+						you&rsquo;ll know to keep this setting disabled.
+          </P>
+          <P>
             <B><FONT FACE="Arial">Looking for trouble</FONT></B>
           </P>
           <P>
@@ -287,6 +297,14 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
             video folks! It&rsquo;s not supposed to reduce weave artifacts (lagging horizontal lines) at
             all. For that, you need to take a look at the <A HREF="Deinterlace.HTM">deinterlacing
             methods</A>.
+          </P>
+          <HR>
+          <P>
+            <B><A NAME="Version History"><FONT FACE="Arial" SIZE="4">Version History</FONT></A></B>
+          </P>
+          <P>
+            With DScaler 4.0, reduction of chroma shimmering is improved.  The settings are also more
+            finely scaled, especially when <FONT COLOR="#993300">Recall</FONT> is set fairly low.
           </P>
           <!-- #EndEditable -->
         </TD>
