Help files updated

--- a/DScaler/Help/Aspect.HTM
+++ b/DScaler/Help/Aspect.HTM
@@ -120,6 +120,19 @@ settings shown below are those that cannot be accessed in this way</p>
           <td>ON</td>
           <td>Can be used (when OFF) to disable ratio greater than screen ratio.</td>
         </tr>
+        <tr>
+          <td>Use WSS data</td>
+          <td>OFF</td>
+          <td>When ON, the automatic aspect ratio detection takes into account 
+            the WSS data including in the VBI data.</td>
+        </tr>
+        <tr> 
+          <td>Use only WSS data</td>
+          <td>OFF</td>
+          <td>When ON, the automatic aspect ratio detection uses only the WSS 
+            data including in the VBI data to do its choices for ratio. This setting 
+            is relevant only when &quot;Use WSS data&quot; is ON.</td>
+        </tr>
         <tr> 
           <td>Bounce Period (Secs)</td>
           <td>1800</td>
