--- a/DScaler/Help/AspectRatio.htm
+++ b/DScaler/Help/AspectRatio.htm
@@ -56,24 +56,26 @@ height="2"></td>
     <td colspan="3"> 
 <!-- #BeginEditable "Text" --> 
 <p>DScaler supports very flexible Aspect ratio control.</p>
-<p>The first step is to set up the aspect ratio of your output device.  As most 
-display devices use square pixels the DScaler's default is to use the aspect ratio
-of the screen resolution you are using.  If you are not using square pixels (e.g. 
-you have a Panamorph attched to your projector) you must manually select the 
-aspect ratio of the display device using the "Aspect Ratio"/"Aspect Ratio of Display
-Screen" selection list. Normally the screen aspect ratio does not need to be changed
-once you have set it up.</p>
-<p>Next you need to tell DScaler what format the incoming video is in.  The most 
-common types are listed at the top of the "Aspect Ratio" menu.  They are:</p>
-<ol><li>4:3 Fullscreen - This is the default type.  Use this type for most TV 
-broadcasts, Fullscreen Laserdiscs and 4:3 DVDs.</li>
-<li>Letterboxed - Use this type for most letterboxed TV film 
-broadcasts, Letterboxed Laserdiscs and letterboxed non-anamorphic DVDs.</li>
-<li>16:9 Anamorhic - Use this type DVD players and Digital TV boxes outputting 
-anamorphic pictures. Even on a 4:3 screen best quality is obtained by using
-anamorphic features on widescreen material.</li></ol>
-<p>There is also a set of more specific input formats availiable off the 
-"Aspect Ratio"/"Advanced Image Aspect Ratios" menu.</p>
+      <p>The first step is to set up the aspect ratio of your output device. As 
+        most display devices use square pixels the DScaler's default is to use 
+        the aspect ratio of the screen resolution you are using. If you are not 
+        using square pixels (e.g. you have a Panamorph attched to your projector) 
+        you must manually select the aspect ratio of the display device using 
+        the "View"/"Aspect Ratio of Display Screen" selection list. Normally the 
+        screen aspect ratio does not need to be changed once you have set it up.</p>
+      <p>Next you need to tell DScaler what format the incoming video is in. The 
+        most common types are listed at the first level of "View" menu. They are:</p>
+      <ol>
+        <li>4:3 Fullscreen - This is the default type. Use this type for most 
+          TV broadcasts, Fullscreen Laserdiscs and 4:3 DVDs.</li>
+        <li>Letterboxed - Use this type for most letterboxed TV film broadcasts, 
+          Letterboxed Laserdiscs and letterboxed non-anamorphic DVDs.</li>
+        <li>16:9 Anamorhic - Use this type DVD players and Digital TV boxes outputting 
+          anamorphic pictures. Even on a 4:3 screen best quality is obtained by 
+          using anamorphic features on widescreen material.</li>
+        <li>Square Pixels - Use this type for most still or movie files.</li>
+      </ol>      <p>There is also a set of more specific input formats availiable off the 
+        "View"/"Advanced Image Aspect Ratios" menu.</p>
 <!-- #EndEditable --> 
 </td>
 </tr>
