--- a/DScaler/Help/Still.htm
+++ b/DScaler/Help/Still.htm
@@ -68,8 +68,7 @@ height="2"></td>
       </ul>
       <p>Each time the current DScaler source is one of these still sources, the 
         menu &quot;Playlist&quot; is available in the menubar.</p>
-      <p> 
-      <font face="Arial" size="3"><b>Displaying a still</b></font> 
+      <p> <font face="Arial" size="3"><b>Displaying a still</b></font> 
       <p></p>
       <p></p>
       <p>DScaler can be used to display stills directly in the graphic card overlay. 
@@ -77,17 +76,22 @@ height="2"></td>
       <p>A DScaler new file format has been created too. It is used to describe 
         test patterns. The test pattern is generated in the graphic card overlay 
         according to its description when this file is opened in DScaler.</p>
-      <p>To open a new still file, select the item &quot;Open...&quot; in the 
-        menu &quot;File&quot;. The selected file, if supported by DScaler, will 
-        be added to the virtual playlist associated to the &quot;Still&quot; source 
-        and will be displayed.</p>
+      <p>To open a new still file, select the item &quot;Open file...&quot; in 
+        the menu &quot;Sources&quot;. The selected file, if supported by DScaler, 
+        will be added to the virtual playlist associated to the &quot;Still&quot; 
+        source and will be displayed.</p>
       <p></p>
       <p><font face="Arial" size="3"><b>Taking a still</b></font> </p>
       <p></p>
       <p>DScaler can be used to take a still of what is currently displayed by 
         DScaler.</p>
       <p>To take a still, select the item &quot;Take Still Picture&quot; in the 
-        menu &quot;View&quot;, or use the &quot;L&quot; shortcut.</p>
+        menu &quot;Actions&quot;, or use the &quot;L&quot; shortcut.<br>
+        You can use a particular mode to take stills periodically, that is every 
+        &lt;n&gt; seconds. The time to wait between each still is defined in the 
+        still settings. To launch the process, select the item &quot;Take Cyclic 
+        Still Pictures&quot; in the menu &quot;Actions&quot;; to stop the process, 
+        select it again. </p>
       <p>When you take a still, a file is automatically created in the DScaler 
         main directory or in the directory you specified in your settings. The 
         following rule is applied to define the file name :<br>
@@ -99,12 +103,14 @@ height="2"></td>
         is the current second<br>
         &lt;cc&gt; is a counter between 00 and 99 allowing 100 captures in the 
         same second<br>
-        &lt;ext&gt; is tif or jpg</p>
+        &lt;ext&gt; is tif or jpg<br>
+        A particular setting allows to use a different file naming, and always 
+        override the same file when taking stills : TV.&lt;ext&gt; where &lt;ext&gt; 
+        is tif or jpg.</p>
       <p>You have a direct access to all the stills taken during the current DScaler 
         session as they are all grouped in a virtual playlist. Select the &quot;Snapshots&quot; 
         source in the menu &quot;Sources&quot; to have a direct access to these 
-        stills. When switching to the &quot;Snapshots&quot; source, the displayed 
-        still will be the last still taken during the session.</p>
+        stills.</p>
       <p>You can choose between different file formats when taking a still :</p>
       <p> 
       <ul>
@@ -114,13 +120,14 @@ height="2"></td>
           is applied</li>
         <li>JPEG : a JPEG compression is applied</li>
       </ul>
-      <p></p>
       <p><u>Warning</u>: in one side, the format TIFF YCbCr is the best as it 
         takes a perfect copy of what is in the overlay and you can restore exactly 
         the same content later; in another side, this format is not supported 
         by lots of graphic software. So this format has to be avoided if you want 
         to share this file with other people.</p>
-      <p></p>
+      <p>When a still taken by DScaler is displayed in DScaler, you can use the 
+        keyboard key &quot;i&quot; to have information about the DScaler context 
+        when this still was taken. These information are displayed using OSD.</p>
       <p>The following settings can be adjusted; they are all defined in the section 
         &quot;Still&quot; of the ini file.</p>
       <table border="1">
@@ -148,6 +155,19 @@ height="2"></td>
           <td>This string defines in which directory are saved the produced still 
             files.</td>
         </tr>
+        <tr> 
+          <td>SaveInSameFile</td>
+          <td>OFF</td>
+          <td>Set it to 1 (ON) to bypass the normal file naming and use always 
+            the same file name when taking stills, or set it to 0 (OFF) to have 
+            the normal file naming.</td>
+        </tr>
+        <tr> 
+          <td>DelayBetweenStills</td>
+          <td>10 seconds</td>
+          <td>Time in seconds to wait between each still when using the mode &quot;take 
+            cyclic still pictures&quot;.</td>
+        </tr>
       </table>
       <p></p>
       <p><font face="Arial, Arial" size="3"><b><font face="Arial">Playlists</font></b></font></p>
@@ -155,10 +175,11 @@ height="2"></td>
         files defined in a text file with the extension &quot;.d3u&quot;. Each 
         line of such a file defines the path to a file which has to be a supported 
         still file in order to be readable by DScaler.</p>
-      <p>To open a new playlist file, select the item &quot;Open...&quot; in the 
-        menu &quot;File&quot;. All the files contained in the selected playlist 
-        file will be added to the virtual playlist associated to the &quot;Still&quot; 
-        source, and the first file of the loaded playlist will be displayed.</p>
+      <p>To open a new playlist file, select the item &quot;Open file...&quot; 
+        in the menu &quot;Sources&quot;. All the files contained in the selected 
+        playlist file will be added to the virtual playlist associated to the 
+        &quot;Still&quot; source, and the first file of the loaded playlist will 
+        be displayed.</p>
       <p>To create and save a new playlist, you can either create manually the 
         playlist file with a text editor, either load all the files you want to 
         include in the new playlist and then save the current virtual playlist 
