Updated Help for new Version

--- a/DScaler/Help/News.htm
+++ b/DScaler/Help/News.htm
@@ -54,19 +54,28 @@ height="2"></td>
 
 <tr>
 <td colspan="3"><!-- #BeginEditable "Text" -->
-<h1>DScaler - version 4.0.0</h1>
+<h1>DScaler - version 4.0.1</h1>
 
 <p>What's new:<br>
 <ul>
-<li>Support of multiple BT cards</li>
-<li>Optimized field access code for fewer dropped frames</li>
-<li>New Adaptive Noise Filter</li>
-<li>New Gradual Noise Filter</li>
+<li>Redesigned core with support of multiple BT cards</li>
+<li>New MoComp deinterlacing mode</li>
+<li>Two improved Noise Filters</li>
 <li>New Histogram Filter</li>
-<li>Flickerless OSD</li>
+<li>Much better User Interface</li>
+<li>Support of TIFF and jpeg still files</li>
+<li>Playlist for stills</li>
+<li>Set of patterns to setup the overlay and the display</li>
+<li>Direct access to the stills taken during the current session</li>
+<li>Action added to search and lock the correct film mode</li>
+<li>New setup program with uninstall</li>
+</ul></p>
+
+<p>What's Improved</p>
+<ul>
+<li>Much better User Interface</li>
 <li>Teletext support improved</li> 
 <li>Additional Teletext languages</li>
-<li>Action added to search and lock the correct film mode</li>
 <li>Sharpness Filter now works with older (MMX/3DNOW) computers</li>
 <li>Some minor improvements to Temporal Comb Filter</li>
 </ul></p>
@@ -74,11 +83,7 @@ height="2"></td>
 <p>What's Experimental:
 <ul>
 <li>New audio code</li>
-<li>Support of DirectShow filters supporting AVI files</li>
-<li>Support of TIFF files</li>
-<li>Playlist for stills</li>
-<li>Set of patterns to setup the overlay and the display</li>
-<li>Direct access to the stills taken during the current session</li>
+<li>Colour Inversion Filter</li>
 </ul></p>
 
 <!-- #EndEditable -->
