--- a/htdocs/downloads.htm
+++ b/htdocs/downloads.htm
@@ -54,6 +54,25 @@ width="100%" height="2"></td>
 
 <tr>
 <td colspan="3" height="1542"><!-- #BeginEditable "Text" -->
+<p>Version 4.0.1&#151;<b>Alpha</b>&#151;[<a href=
+"http://prdownloads.sourceforge.net/deinterlace/DScaler401.exe">Setup Program</a>] [<a href=
+"http://prdownloads.sourceforge.net/deinterlace/DScaler401src.zip">Source Zipped</a>]</p>
+<ul>
+<li>Massive improvements to 2:2 pulldown detection</li>
+<li>Redesigned core with support of multiple BT cards</li> 
+<li>New MoComp deinterlacing mode</li> 
+<li>Two improved Noise Filters</li> 
+<li>New Histogram Filter</li> 
+<li>Much better User Interface</li> 
+<li>Support of TIFF and jpeg still files</li> 
+<li>Playlist for stills</li> 
+<li>Set of patterns to setup the overlay and the display</li> 
+<li>Direct access to the stills taken during the current session</li> 
+<li>Action added to search and lock the correct film mode</li> 
+<li>New setup program with uninstall</li>
+<li>Lots of other changes and fixes</li> 
+</ul>
+
 <p>Version 3.1.0&#151;<b>Stable</b>&#151;[<a href=
 "http://prdownloads.sourceforge.net/deinterlace/DScaler310exe.zip">
 Binary Zipped</a>] [<a href=
