Update to reflect new feature package.

--- a/htdocs/about.htm
+++ b/htdocs/about.htm
@@ -40,29 +40,31 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <p> TV is a piece of software that grabs analog or digital, interlaced video, 
-        and deinterlaces it to make it a progressive scan feed for use on your 
-        computer monitor or projector.
-      <p> Analog or digital, interlaced video is what output devices like VCRs, 
-        Laserdiscs, game consoles, DVD players output.
-      <p> Unlike most existing software that tries to do the same, DScaler implements 
-        very sophisticated algorithms to deinterlace such sources in real time. 
-        Using such algorithms makes sure that each kind of video source is handled 
-        a different way. It provides the user with a level of image quality unknown 
-        to PC owners up to now. 
-      <p> Some of those techniques are ; 
+      <p> DScaler is a piece of software that captures video, processes it, and 
+        scales it for presentation on a projector or computer monitor. Unlike 
+        most existing software that processes video, DScaler implements highly 
+        sophisticated algorithms that work in real-time, providing PC owners with 
+        a level of image quality unknown up to now.
+      <p>DScaler packages a variety of functions, including:
       <ul>
-        <li>Video source deinterlacing</li>
-        <li>inverse Telecine detection 2:2 (for PAL movies) as well as 3:2 (for
-          NTSC movies) pulldown</li>
-        <li>Filters for noise removal</li>
+        <li>Grabbing video from a DVD player, game console, laserdisc, or VCR 
+          in a reliable fashion, in either analog or digital form;</li>
+        <li>Deinterlacing video source, such as sports and news produced with 
+          a video camera, as well as console games;</li>
+        <li>Detecting and removing 2:2 pulldown (PAL) and 3:2 pulldown (NTSC) 
+          for movies and filmed television programs;</li>
+        <li>Reducing video noise on analog sources;</li>
+        <li>Automatically calibrating video capture cards for optimal brightness, 
+          contrast and color;</li>
+        <li>Manipulating video through gamma, sharpness and other filters;</li>
+        <li>Viewing still images;</li>
+        <li>Reducing judder and other video timing anomalies; and</li>
+        <li>Presenting all of the above in the desired resolution and aspect ratio.</li>
       </ul>
-      <p> The image quality resulting from those complex operations is high and 
-        allows some people equipped with data capable projectors to feed them 
-        with a progressive scan source that was interlaced right before.
-      <p>The main forum for user discussion is the Home Theater Computers Section 
-        on the <a href="http://www.avsforum.com/avs-vb/">AV Science 
-        Forum</a>.</p>
+      <p> The main forum for user discussion is the <a href="phpBB/">DScaler Support 
+        Forum</a>. In addition, you will find knowledgeable discussion about this 
+        and other computer A/V-related topics at <a href="http://www.avsforum.com/">AVS 
+        Forum</a>. 
       <p>Please see the <a href="downloads.htm">downloads page</a> to download 
         the latest version.</p>
       <!-- #EndEditable --></td>
