--- a/htdocs/reviews/index.htm
+++ b/htdocs/reviews/index.htm
@@ -29,8 +29,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr> 
     <td width="160"><img src="../images/dscalerlogo.jpg" alt="DScaler logo"></td>
-    <td colspan="2" align="right" valign="bottom"> <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->What 
-      they say about DScaler&nbsp;<!-- #EndEditable --></b></font></td>
+    <td colspan="2" align="right" valign="bottom"> <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->Press 
+      Reviews&nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
   <tr bgcolor="#FFCC00" align="right"> 
     <td colspan="3"><img src="../images/yellowspacer.gif" width="100%" height="2"></td>
@@ -40,34 +40,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <h1>Individual reviews</h1>
-      <p>&nbsp; 
-      <p><b>Mark Rejhon</b> reviews v1.2 and comments on the newly supported video-source 
-        deinterlacing...<br>
-      <blockquote>&quot;Fast motion sports such as Football, Hockey and downhill 
-        skiing TV shows look MUCH better now with the new dTV 1.2 video-source 
-        deinterlacer. Anything with fast panning motion is very noticeably improved. 
-        No more venetian-blinds effects!&quot;</blockquote>
-      <p><b>CH Yeow</b> comments on v1.2...<br>
-      <blockquote>&quot;I have to say your software is excellent. I have so much 
-        trouble playing a region 4 PAL disc "Screamers" on regular Powerdvd or 
-        Windvd. It skips frames especially in Chapter 17. But it seems that your 
-        software plays PAL discs and Pal VCD so flawlessly.&quot; </blockquote>
-      <p><b>Larry Davis</b> says regarding using v1.2 with laserdisc material...<br>
-      <blockquote>&quot;I installed the Win-TV yesterday along with the dTV software. 
-        I connected my laserdisc player to the Win-TV, launched dTV and I was 
-        stunned by how good the picture looked. It doesn't look as good as PC 
-        DVD, but it is a quantum leap beyond s-video input on the Asus geforce.&quot;</blockquote>
-      <p><b>Li On</b> compliments the initial release...<br>
-      <blockquote>&quot;I used S-video from a Pioneer LD player. Picture is too 
-        dark but adjusted the dTV video setting gave a great vivid picture. I 
-        tried StarWar TPM LD... and it gave a perfect picture with zero artifact! 
-        AMAZING! The picture stay in such perfect 'film mode'... I ended up watch 
-        the whole movie! Even the super fast motion in 'Pod Race' scene is perfect. 
-        I must said the <b>picture quality is as great as my Faroudja processor!</b>&quot;</blockquote>
-      <h1>Press</h1>
-      <p>&nbsp;</p>
-      <h2><a href="http://www.annees-laser.com/">Les ann&eacute;es laser</a></h2>
+      <h1><a href="http://www.annees-laser.com/">Les ann&eacute;es laser</a></h1>
       <p>France, issue 74, (c) Les ann&eacute;es laser</p>
       <p>&nbsp;</p>
       <table width="100%" border="0">
