Clean up dead link to Gatos.

--- a/htdocs/Links.htm
+++ b/htdocs/Links.htm
@@ -64,68 +64,61 @@ Driver Project</a><br>
 Linux Driver</a><br>
  <a href=
 "http://www.virtualdub.org/index">VirtualDub</a><br>
- <a href="http://home.bip.net/gunnart/video/">Gunnar Thalin's
-VirtualDub Plug-ins</a><br>
- <a href="http://www.linuxvideo.org/gatos/">GATOS</a></p>
+          <a href="http://home.bip.net/gunnart/video/">Gunnar Thalin's VirtualDub 
+          Plug-ins</a></p>
 </blockquote>
 
 <h3><br>
  Discussion</h3>
 
-<blockquote>
-<p>
-<a href=
-"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=89606">
-DScaler 3.1.0 Release Thread</a> (AVS Forum)<br>
-
-<a href=
-"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=32723">
-DScaler 2.3.0 Release Thread</a> (AVS Forum)<br>
- 
-<a href=
-"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=78268">
-dTV 2.1.2 Release Thread</a> (AVS Forum)<br>
- <a href=
-"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=76603">dTV 2.0.2
-Release Thread</a> (AVS Forum)<br>
- <a href=
-"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=76526">dTV 2.0.1
-Release Thread</a> (AVS Forum)<br>
- <a href=
-"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=75972">dTV 2.0.0
-Release Thread</a> (AVS Forum)<br>
-
- <a href=
-"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=75799">ANNOUNCEMENT:
-dTV 1.9 software video processor is now OUT</a> (AVS Forum)<br>
- <a href=
-"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=75276">NEW
-VERSION: dTV 1.8 released</a> (AVS Forum)<br>
- <a href=
-"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=75045">dTV 1.7
-Experimental Beta</a> (AVS Forum)<br>
- <a href=
-"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=74931">dTV 1.6
-Experimental Beta</a> (AVS Forum)<br>
- <a href=
-"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=74773">dTV 1.5 -
-Auto Pulldown detect & better video deinterlacing</a> (AVS
-Forum)<br>
- <a href=
-"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=74732">dTV
-Version 1.4</a> (AVS Forum)<br>
- <a href=
-"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=74664">dTV New
-Release Version 1.3</a> (AVS Forum)<br>
- <a href=
-"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=74586">New
-version of dTV - now with video souce deinterlacing</a> (AVS
-Forum)<br>
- <a href=
-"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=78328">First
-Version of NTSC/PAL TV deinterlacing program</a> (AVS Forum)<br>
-</p>
-</blockquote>
+      <blockquote>
+        <p><a href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=89606">DSclaer 3.1.0 
+          Release Thread</a> (AVS Forum)<br>
+          <a href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=32723"> DScaler 2.3.0 
+          Release Thread</a> (AVS Forum)<br>
+          <a href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=78268"> dTV 2.1.2 Release 
+          Thread</a> (AVS Forum)<br>
+          <a href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=76603">dTV 2.0.2 Release 
+          Thread</a> (AVS Forum)<br>
+          <a href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=76526">dTV 2.0.1 Release 
+          Thread</a> (AVS Forum)<br>
+          <a href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=75972">dTV 2.0.0 Release 
+          Thread</a> (AVS Forum)<br>
+          <a href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=75799">ANNOUNCEMENT: 
+          dTV 1.9 software video processor is now OUT</a> (AVS Forum)<br>
+          <a href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=75276">NEW VERSION: 
+          dTV 1.8 released</a> (AVS Forum)<br>
+          <a href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=75045">dTV 1.7 Experimental 
+          Beta</a> (AVS Forum)<br>
+          <a href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=74931">dTV 1.6 Experimental 
+          Beta</a> (AVS Forum)<br>
+          <a href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=74773">dTV 1.5 - Auto 
+          Pulldown detect & better video deinterlacing</a> (AVS Forum)<br>
+          <a href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=74732">dTV Version 
+          1.4</a> (AVS Forum)<br>
+          <a href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=74664">dTV New Release 
+          Version 1.3</a> (AVS Forum)<br>
+          <a href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=74586">New version 
+          of dTV - now with video souce deinterlacing</a> (AVS Forum)<br>
+          <a href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=78328">First Version 
+          of NTSC/PAL TV deinterlacing program</a> (AVS Forum)<br>
+        </p>
+        </blockquote>
 
 <!-- #EndEditable --></td>
 </tr>
@@ -173,7 +166,7 @@ href="keyboard.htm" class="bottommenu">keyboard shortcuts</a> |
 
 <p> </p>
 
-<!-- #EndTemplate -->
-</body>
+</body><!-- #EndTemplate -->
+
 </html>
 
