Moved documentation for prefetching to a different file Documented the video mode setting for the comb filter

--- a/DScaler/Help/GradualNoise.htm
+++ b/DScaler/Help/GradualNoise.htm
@@ -83,22 +83,14 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
             with close-ups of moving faces. Increase <FONT COLOR="#993300">Noise Reduction</FONT> until
             the suppression of noise doesn&rsquo;t seem worth the blur.
           </P>
+          <P>
             <B><FONT FACE="Arial" COLOR="#993300">
-              Fast memory access
-            </FONT></B>
+						  Fast Memory Access
+					  </FONT></B>
           </P>
           <P>
-            You&rsquo;ll probably want to keep this setting turned on.
-						With it enabled, the filter will run up to twice as
-						fast.
-          </P>
-          <P>
-            However, there are a few motherboards&nbsp;&mdash; mostly
-						made by VIA&nbsp;&mdash; for which <FONT COLOR="#993300">
-            Fast memory access</FONT> will cause problems.  If you see
-						fleeting horizontal lines in your picture, try turning this
-						off in any filters which offer it.  If that fixes the lines,
-						you&rsquo;ll know to keep this setting disabled.
+						 This is a <A HREF="Fast Memory Access.htm">compatability
+						 setting</A> which should normally be turned on.
           </P>
           <HR>
           <P>
