--- a/DScaler/Help/Noise.HTM
+++ b/DScaler/Help/Noise.HTM
@@ -84,7 +84,8 @@ values.</p>
 <tr>
 <td>Fast Memory Access</td>
 <td>On</td>
-<td>This speeds up the filter, but is incompatible with some VIA motherboards.</td>
+<td>This speeds up the filter, but is <A HREF="Fast Memory Access.htm">
+  incompatible</A> with some VIA motherboards.</td>
 </tr>
 
 </table>
