--- a/DScaler/Help/TemporalComb.htm
+++ b/DScaler/Help/TemporalComb.htm
@@ -94,8 +94,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <P>
             I&rsquo;m going to describe how to configure this filter conservatively, so you can
             forget about it afterward. If you like to fiddle with sliders, you can instead use much more
-            aggressive settings (lower <FONT COLOR="#993300">Recall</FONT> and <FONT COLOR=
-            "#993300">Shimmering</FONT> values) and turn them up only when you have to.
+            aggressive settings (lower <FONT COLOR="#993300">recall</FONT> and <FONT COLOR=
+            "#993300">shimmering</FONT> values) and turn them up only when you have to.
           </P>
           <P>
             <A NAME="Recall"><B><FONT FACE="Arial" COLOR="#993300">Recall of past
@@ -139,15 +139,15 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
             detection method. If you&rsquo;ve enabled Even Luma Peaking and Odd Luma Peaking (in the
             Advanced Video Flags dialog), you&rsquo;ll need to set this very high&nbsp;&mdash; to 45 or 50.
             With peaking disabled, you can drop this setting to around 35. You can lower it by about 10
-            points if you turn on <FONT COLOR="#993300">Trade Speed for Accuracy</FONT>.
+            points if you turn on <FONT COLOR="#993300">trade speed for accuracy</FONT>.
           </P>
           <P>
             The higher you set this, the more likely you are to see transient spots. So if you set this
-            really high, you&rsquo;ll want to increase <FONT COLOR="#993300">Recall</FONT> and/or <FONT
-            COLOR="#993300">Shimmering</FONT>.
+            really high, you&rsquo;ll want to increase <FONT COLOR="#993300">recall</FONT> and/or <FONT
+            COLOR="#993300">shimmering</FONT>.
           </P>
           <P>
-            There isn&rsquo;t an intuitive way to choose the <FONT COLOR="#993300">Maximum color
+            There isn&rsquo;t an intuitive way to choose the <FONT COLOR="#993300">maximum color
             variation</FONT>, so here&rsquo;s a guide to help you set it:
           </P>
           <UL>
@@ -159,19 +159,19 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
               neigh&shy;boring green and magenta color bars.
             </LI>
             <LI>
-              Turn <FONT COLOR="#993300">Recall</FONT> and <FONT COLOR="#993300">Shim&shy;mering</FONT> all
-              the way down. Turn <FONT COLOR="#993300">Max&shy;imum color varia&shy;tion</FONT> up really
+              Turn <FONT COLOR="#993300">recall</FONT> and <FONT COLOR="#993300">shim&shy;mering</FONT> all
+              the way down. Turn <FONT COLOR="#993300">max&shy;imum color varia&shy;tion</FONT> up really
               high (to about 80). The dot crawl should dis&shy;appear. (Well, bad dot crawl does still leave
-              a resid&shy;ual shim&shy;mer unless you enable <FONT COLOR="#993300">Trade Speed for
-              Accuracy</FONT>.)
+              a resid&shy;ual shim&shy;mer unless you enable <FONT COLOR="#993300">trade speed for
+              accuracy</FONT>.)
             </LI>
             <LI>
-              Move <FONT COLOR="#993300">Max&shy;imum color varia&shy;tion</FONT> down until the dot crawl
+              Move <FONT COLOR="#993300">max&shy;imum color varia&shy;tion</FONT> down until the dot crawl
               returns. Then raise it until the dot crawl dis&shy;appears, again. You&rsquo;ve now got
               your&shy;self the best value for it.
             </LI>
             <LI>
-              Turn <FONT COLOR="#993300">Recall</FONT> and <FONT COLOR="#993300">Shim&shy;mering</FONT> back
+              Turn <FONT COLOR="#993300">recall</FONT> and <FONT COLOR="#993300">shim&shy;mering</FONT> back
               up to more reason&shy;able values.
             </LI>
           </UL>
@@ -185,26 +185,27 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
             needs).
           </P>
           <P>
-            As with <FONT COLOR="#993300">Recall</FONT>, you&rsquo;ll need to wait a moment before this
+            As with <FONT COLOR="#993300">recall</FONT>, you&rsquo;ll need to wait a moment before this
             setting takes effect.
           </P>
           <P>
             <B><FONT FACE="Arial" COLOR="#993300">
-              Fast memory access
-            </FONT></B>
+						  Video mode
+					  </FONT></B>
           </P>
           <P>
-            You&rsquo;ll probably want to keep this setting turned on.
-						With it enabled, the filter will run up to twice as
-						fast.
+						 Usually, people in North America and Japan should set this to NTSC,
+						 while everyone else should set this to PAL.  If this is set incorrectly,
+						 the comb filter won&rsquo;t work at all.
           </P>
           <P>
-            However, there are a few motherboards&nbsp;&mdash; mostly
-						made by VIA&nbsp;&mdash; for which <FONT COLOR="#993300">
-            Fast memory access</FONT> will cause problems.  If you see
-						fleeting horizontal lines in your picture, try turning this
-						off in any filters which offer it.  If that fixes the lines,
-						you&rsquo;ll know to keep this setting disabled.
+            <B><FONT FACE="Arial" COLOR="#993300">
+						  Fast memory access
+					  </FONT></B>
+          </P>
+          <P>
+						 This is a <A HREF="Fast Memory Access.htm">compatability
+						 setting</A> which should normally be turned on.
           </P>
           <P>
             <B><FONT FACE="Arial">Looking for trouble</FONT></B>
@@ -214,7 +215,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
             mater&shy;ial which are especially problematic. Strobe effects in music videos may cause
             fits. But the very worst case is the ticker tape on CNBC (on US Cable), which goes by at the
             right speed to fool the filter. Worse yet, it has bad (but moving) dot crawl. You&rsquo;ll need
-            to set the <FONT COLOR="#993300">Recall</FONT> option pretty high (about 85%) to avoid
+            to set the <FONT COLOR="#993300">recall</FONT> option pretty high (about 85%) to avoid
             problems with it.
           </P>
           <HR>
@@ -280,7 +281,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
                     ...and here he is with the comb fil&shy;ter enabled. Note the smooth&shy;er bound&shy;ary
                     be&shy;tween his head/neck and the back&shy;ground. (Ig&shy;nore the stuff under his
                     lip&nbsp;&mdash; it comes from the im&shy;age com&shy;pres&shy;sion.) This pic&shy;ture
-                    was taken with <FONT COLOR="#993300">Trade Speed for Ac&shy;cu&shy;ra&shy;cy</FONT>
+                    was taken with <FONT COLOR="#993300">trade speed for ac&shy;cu&shy;ra&shy;cy</FONT>
                     turned on. &larr;
                     <BR>
                   </P>
@@ -304,7 +305,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           </P>
           <P>
             With DScaler 4.0, reduction of chroma shimmering is improved.  The settings are also more
-            finely scaled, especially when <FONT COLOR="#993300">Recall</FONT> is set fairly low.
+            finely scaled, especially when <FONT COLOR="#993300">recall</FONT> is set fairly low.
           </P>
           <!-- #EndEditable -->
         </TD>
