--- a/DScaler/Help/Sharpness.HTM
+++ b/DScaler/Help/Sharpness.HTM
@@ -74,7 +74,8 @@ on VCR sources.</p>
 <tr>
 <td>Fast Memory Access</td>
 <td>On</td>
-<td>This speeds up the filter, but is incompatible with some VIA motherboards.</td>
+<td>This speeds up the filter, but is <A HREF="Fast Memory Access.htm">
+	incompatible</A> with some VIA motherboards.</td>
 </tr>
 </table>
 
